Added some basic JavaScript && CSS examples

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Page 1 | Raw</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 <h1>Page 1</h1>
 <p>This is page 1</p>
 <a href="page2.html">Go to page 2</a>
+<br>
+<br>
+<button>This is a globally styled button</button>
+<br>
+<br>
+<button style="background-color: red;">This is an inline styled button</button>
+<br>
+<br>
+<div class="card">
+    This is a card
+</div>
 </body>
 </html>
