--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Page 2 | Raw</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Page 2</h1>
